@@ -1,8 +1,9 @@
 Here is an overview of changes for each releases:
 
-2007-09-11, nl_carnage:
+2007-09-12, nl_carnage:
 - Fixed a focus/selection-bug
 - Corrected german translations
+- Added filter text field for key tree
 
 2007-09-11, nl_carnage:
 - Added rudimentary keyboard support for I18nPage: ENTER (+Shift) goes to the next (previous) key,
